--- a/code/src/style.css
+++ b/code/src/style.css
@@ -2,4 +2,45 @@ html {
     font-size: 1em;
     line-height: 1.4;
     font-family: sans-serif;
+    padding: 0px;
+    margin: 0px;
+}
+
+*{
+    box-sizing: border-box;
+}
+
+body{
+    padding: 0;
+    marging: 0;
+}
+
+#vis{
+    width: 100vw;
+    height: 100vh;
+    padding: 0px;
+    margin: 0px;
+
+}
+
+#head {
+    width: 100%;
+    height: 20%;
+    background-color: aqua;
+}
+
+
+#history {
+    width: 70%;
+    height: 80%;
+    background-color: fuchsia;
+    display: inline-block;
+}
+
+
+#details {
+    width: 30%;
+    height: 80%;
+    background-color: blue;
+    display: inline-block;
 }
