styling the graph

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -45,7 +45,7 @@ div {display: table}
 #history {
     width: 70%;
     height: 100%;
-    background-color: fuchsia;
+    background-color: white;
     display: inline-block;
 }
 
