--- a/code/src/details/commit_details.css
+++ b/code/src/details/commit_details.css
@@ -4,13 +4,13 @@
 #cmt_desc {
     width: 100%;
     height: 50%;
-    background-color: green;
+    /*background-color: green;*/
 }
 
 #cmt_files {
     width: 100%;
     height: 50%;
-    background-color: greenyellow;
+    /*background-color: greenyellow;*/
 }
 
 #file_chart {
