--- a/code/src/style.css
+++ b/code/src/style.css
@@ -53,7 +53,7 @@ div {display: table}
 #details {
     width: 30%;
     height: 100%;
-    background-color: blue;
+    background-color: rgb(216, 216, 216);
     display: inline-block;
 }
 
