--- a/code/src/history/history.css
+++ b/code/src/history/history.css
@@ -18,9 +18,11 @@ text {
 }
 
 #dagrediv {
-    width: 70%;
+    width: 100%;
     height: 100%;
-    position: absolute;
+    /* TODO: ELIAS commented this out */
+    /* because interfered with Split library drag handle */
+    /* position: absolute; */
     z-index: 999;
     padding: 20px 20px 20px 20px;
 }
