selecting a commit deselects the selected  author

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -51,6 +51,7 @@ div {display: table}
 
 
 #details {
+    position: relative;
     float: left;
     /* TODO: delete bec Split library handles width */
     /* width: 30%; */
