--- a/code/src/history/history.css
+++ b/code/src/history/history.css
@@ -1,7 +1,3 @@
-/* This sets the color for "TK" nodes to a light blue green. */
-g.type-TK > rect {
-    fill: #00ffd0;
-}
 
 text {
     font-weight: 300;
@@ -11,9 +7,10 @@ text {
 
 .node rect {
     stroke: #999;
-    fill: #afa;
+    fill: #77ff77;
     stroke-width: 1.5px;
 }
+
 
 .edgePath path {
     stroke: #333;
@@ -21,9 +18,11 @@ text {
 }
 
 #dagrediv {
-    width: 70%;
+    width: 100%;
     height: 100%;
-    position: absolute;
+    /* TODO: ELIAS commented this out */
+    /* because interfered with Split library drag handle */
+    /* position: absolute; */
     z-index: 999;
     padding: 20px 20px 20px 20px;
 }
@@ -33,4 +32,47 @@ text {
     stroke-width: 5px;
     stroke: forestgreen;
     fill: orange;
+}
+
+.commitcontainer {
+    min-width: 174px;
+    border: 1px solid;
+    overflow: hidden; /* will contain if #first is longer than #second */
+}
+.lineschanged {
+    min-width: 40%;
+    float:left ;
+    border: 1px solid;
+}
+.textinfo {
+    min-width: 60%;
+    max-width: 80%;
+    border: 1px solid ;
+    float: right;
+    overflow: hidden;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.textinfo{
+    padding-left: 5px;
+    line-height: 2em
+}
+
+.message{
+    font-size: 15px;
+
+}
+
+.author{
+    font-size: 13px;
+    color: #666666;
+}
+
+.date{
+    font-size: 13px;
+    color: #666666;
 }
