--- a/code/src/style.css
+++ b/code/src/style.css
@@ -45,7 +45,7 @@ div {display: table}
     /* TODO: delete bec Split library handles width */
     /*width: 70%;*/
     height: 100%;
-    background-color: #F9FBFB;
+    background-color: #FFFFFF;
     float: left;
 }
 
