--- a/code/src/details/commit_details.css
+++ b/code/src/details/commit_details.css
@@ -34,15 +34,15 @@
 }
 
 #adds_dels_chart {
-    width: 90%;
+    width: 100%;
     height: 60%;
-    margin: 5%;
+    margin: 0;
 }
 
 #file_chart {
-    width: 90%;
-    height: 90%;
-    margin: 5%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 #cmt_files {
