--- a/code/src/details/repo_details.css
+++ b/code/src/details/repo_details.css
@@ -2,11 +2,11 @@
 #repo_adds_dels_chart {
     width: 100%;
     height: 100%;
-    padding: 5%;
+    padding: 0;
 }
 
 #repo_file_chart {
     width: 100%;
     height: 90%;
-    padding: 5%;
+    padding: 0;
 }
