--- a/code/src/details/commit_details.css
+++ b/code/src/details/commit_details.css
@@ -1,4 +1,8 @@
 
+#cmt_details {
+    width: 100%;
+    height: 100%;
+}
 
 #cmt_desc_head {
     width: 100%;
@@ -35,13 +39,7 @@
 
 #adds_dels_chart {
     width: 100%;
-    height: 60%;
-    margin: 0;
-}
-
-#file_chart {
-    width: 100%;
-    height: 100%;
+    height: 20%;
     margin: 0;
 }
 
@@ -49,4 +47,10 @@
     width: 100%;
     height: 50%;
     /*background-color: greenyellow;*/
+}
+
+#file_chart {
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
