--- a/code/src/details/repo_details.css
+++ b/code/src/details/repo_details.css
@@ -11,7 +11,11 @@
 
 #repo_files {
     width: 100%;
-    height: 60%;
+    height: 59%;
+}
+
+#repo_details_headline {
+    margin: 0
 }
 
 #repo_file_chart {
