--- a/code/src/header/header.css
+++ b/code/src/header/header.css
@@ -1,8 +1,31 @@
 
+#header img {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+#header select {
+    margin-left: 50%;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+
+    padding: 12px 24px;
+    background-color: #F9FBFB;
+    border-radius: 4px;
+    border: none;
+}
+
+
 #authors {
     width: fit-content;
     height: 50px;
     float: right;
+    margin-right: 36px;
 }
 
 #authors_label {
